[generator] Remove jsonld_*** generation, use classes from commons module